Add permissions for contents and packages in publish_ts_types.yml

--- a/.github/workflows/publish_ts_types.yml
+++ b/.github/workflows/publish_ts_types.yml
@@ -8,6 +8,8 @@ on:
 
 permissions:
   id-token: write
+  contents: read
+  packages: write
 
 jobs:
   # This job publishes the TypeScript types to the GitHub Package Registry
