--- a/types/package.json
+++ b/types/package.json
@@ -3,8 +3,14 @@
 	"license": "AGPL-3.0-only",
 	"version": "0.1.0",
 	"main": "src/types.ts",
+	"files": [
+		"src/types.ts"
+	],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/saebyn/glowing-telegram.git"
+	},
+	"devDependencies": {
+		"quicktype": "23"
 	}
 }
