--- a/.github/workflows/publish_ts_types.yml
+++ b/.github/workflows/publish_ts_types.yml
@@ -34,6 +34,9 @@ jobs:
           registry-url: "https://npm.pkg.github.com"
           always-auth: true
 
+      - name: Move .npmrc
+        run: mv ../.npmrc .
+
       - name: Install dependencies
         run: npm ci
         
@@ -53,9 +56,6 @@ jobs:
 
             mv package.json.tmp package.json
           fi
-
-      - name: listing files
-        run: ls -la
 
       - name: Publish to GitHub Package Registry
         run: npm publish --provenance
