--- a/.github/workflows/publish_ts_types.yml
+++ b/.github/workflows/publish_ts_types.yml
@@ -34,11 +34,8 @@ jobs:
           registry-url: "https://npm.pkg.github.com"
           always-auth: true
 
-      - name: list files
-        run: ls -la
-
-      - name: list files above
-        run: ls -la ..
+      - name: cat the .npmrc file
+        run: cat $HOME/.npmrc
 
       - name: Install dependencies
         run: npm ci
