try update npm config path in publish_ts_types workflow

--- a/.github/workflows/publish_ts_types.yml
+++ b/.github/workflows/publish_ts_types.yml
@@ -35,7 +35,7 @@ jobs:
           always-auth: true
 
       - name: cat the .npmrc file
-        run: cat $HOME/.npmrc
+        run: cat $NPM_CONFIG_USERCONFIG
 
       - name: Install dependencies
         run: npm ci
