update publish workflow to allow public access for npm package publishing

--- a/.github/workflows/publish_ts_types.yml
+++ b/.github/workflows/publish_ts_types.yml
@@ -54,6 +54,6 @@ jobs:
           fi
 
       - name: Publish to GitHub Package Registry
-        run: npm publish --provenance
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
