feat: add media_lambda for generating HLS playlists from video metadata

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,8 @@
         "summarize_transcription",
         "audio_transcriber",
         "video_ingestor",
-        "twitch_lambda"
+        "twitch_lambda",
+        "media_lambda",
       ]
     },
     {
