--- a/.github/workflows/publish_ts_types.yml
+++ b/.github/workflows/publish_ts_types.yml
@@ -1,18 +1,10 @@
-name: "Publish TypeScript types to GitHub Package Registry"
+name: "Publish TypeScript types to npm"
 
 on:
   release: 
     types: ["published"]
-  push: 
-    branches: ["main"]
 
 jobs:
-  # This job publishes the TypeScript types to the GitHub Package Registry
-  # it runs the "./types/import.sh" script which generates the types in types/
-  # we publish the types to the GitHub Package Registry
-  # the package is versioned with the "version" field in package.json
-  # so we need to update the version in package.json here to match the version
-  # of the release, or the sha of the commit in the case of a push
   publish_ts_types:
     runs-on: ubuntu-latest
 
@@ -31,7 +23,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          registry-url: "https://npm.pkg.github.com"
+          registry-url: https://registry.npmjs.org
 
       - name: Install dependencies
         run: npm ci
@@ -39,21 +31,7 @@ jobs:
       - name: Generate TypeScript types
         run: ./import.sh
 
-      - name: Update package.json version
-        run: |
-          if [ -n "$GITHUB_REF" ]; then
-            if [[ "$GITHUB_REF" == refs/tags/* ]]; then
-              version=$(echo $GITHUB_REF | sed 's/refs\/tags\///')
-              jq ".version = \"$version\"" package.json > package.json.tmp
-            else
-              version=$(echo $GITHUB_SHA | cut -c1-7)
-              jq ".version |= . + \"-$version\"" package.json > package.json.tmp
-            fi
-
-            mv package.json.tmp package.json
-          fi
-
-      - name: Publish to GitHub Package Registry
+      - name: Publish to npm
         run: npm publish --provenance --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
