--- a/render_job/Cargo.toml
+++ b/render_job/Cargo.toml
@@ -15,6 +15,13 @@ tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 tempfile = "3"
 chrono = { workspace = true }
 types = { workspace = true }
+figment = { workspace = true }
+aws-config = { workspace = true }
+gt_ffmpeg = { path = "../gt_ffmpeg" }
+aws-sdk-s3 = { workspace = true }
+aws-sdk-dynamodb = { workspace = true }
+serde_dynamo = { workspace = true }
