--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ figment = { version = "0.10.19", features = ["env"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 openai_dive = "0.7.3"
-reqwest = { version = "0.12.12" }
+reqwest = { version = "0.12.12", features = ["json"] }
 redact = { version = "0.1.10", features = ["serde"] }
 chrono = { version = "0.4.39", features = ["serde"] }
 uuid = { version = "1.12", features = ["v7", "fast-rng"] }
