--- a/gt_ffmpeg/Cargo.toml
+++ b/gt_ffmpeg/Cargo.toml
@@ -20,3 +20,6 @@ chrono = { workspace = true }
 iso8601 = { version = "0.6.2", features = ["serde", "chrono"] }
 regex = "1.10.6"
 types = { workspace = true }
+
+[dev-dependencies]
+pretty_assertions = "1.4.1"
