--- a/gt_axum/Cargo.toml
+++ b/gt_axum/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "twitch_lambda"
+name = "gt_axum"
 version = "0.1.0"
 edition = "2021"
-description = "Twitch Lambda for the Glowing Telegram project"
-keywords = ["rust", "aws", "lambda", "twitch", "glowing-telegram"]
+description = "Axum helpers for the Glowing Telegram project"
+keywords = ["rust", "glowing-telegram", "axum"]
 categories = ["web-programming"]
 authors.workspace = true
 readme.workspace = true
@@ -11,28 +11,16 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
-aws-config = { workspace = true }
-aws-sdk-secretsmanager = { workspace = true }
 lambda_runtime = { workspace = true }
 lambda_http = { workspace = true }
 tower-http = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-tokio = { workspace = true }
-figment = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 axum = { workspace = true }
 axum-aws-lambda = { workspace = true }
 aws_lambda_events = { workspace = true }
-chrono = { workspace = true }
-uuid = { workspace = true }
-types = { workspace = true }
-reqwest = { workspace = true }
-redact = { workspace = true }
-oauth2 = { version = "4", features = ["reqwest", "rustls-tls"] }
-gt_secrets = { workspace = true }
-gt_axum = { workspace = true }
 
 [lints]
 workspace = true
