--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,7 @@
         "audio_transcriber",
         "video_ingestor",
         "twitch_lambda",
+        "youtube_lambda",
         "media_lambda",
         "render_job"
       ]
