--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
   "twitch_lambda",
   "render_job",
   "gt_secrets",
-  "gt_axum",
+  "gt_axum", "youtube_lambda",
 ]
 
 [workspace.package]
