--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ members = [
   "twitch_lambda",
   "render_job",
   "gt_secrets",
-  "gt_axum", "youtube_lambda", "upload_video",
+  "gt_axum",
+  "youtube_lambda",
+  "upload_video",
+  "gt_app",
 ]
 
 [workspace.package]
@@ -26,6 +29,7 @@ categories = ["web-programming"]
 types = { path = "./types" }
 gt_secrets = { path = "./gt_secrets" }
 gt_axum = { path = "./gt_axum" }
+gt_app = { path = "./gt_app" }
 aws-config = "1.5.5"
 aws-sdk-secretsmanager = { version = "1.63.0" }
 aws-sdk-s3 = { version = "1.49.0" }
