feat(upload_video): implement chunked video upload to YouTube with status handling

--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -28,6 +28,7 @@ tower-http = { workspace = true }
 chrono = { workspace = true }
 uuid = { workspace = true }
 openai_dive = { workspace = true }
+types = { workspace = true }
 
 [lints]
 workspace = true
