--- a/render_job/Cargo.toml
+++ b/render_job/Cargo.toml
@@ -22,6 +22,7 @@ types = { workspace = true }
 figment = { workspace = true }
 aws-config = { workspace = true }
 gt_ffmpeg = { path = "../gt_ffmpeg" }
+gt_app = { workspace = true }
 aws-sdk-s3 = { workspace = true }
 aws-sdk-dynamodb = { workspace = true }
 serde_dynamo = { workspace = true }
