--- a/upload_video/Cargo.toml
+++ b/upload_video/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "upload_video"
+description = "Upload video from S3 to YouTube"
 version = "0.1.0"
 edition = "2024"
 authors.workspace = true
@@ -14,16 +15,19 @@ aws-sdk-s3 = { workspace = true }
 aws-sdk-dynamodb = { workspace = true }
 aws-sdk-secretsmanager = { workspace = true }
 aws-config = { workspace = true }
+chrono = { workspace = true }
 tokio = { workspace = true }
 figment = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-reqwest = { workspace = true }
+reqwest = { workspace = true, features = ["stream", "json"] }
 redact = { workspace = true }
 oauth2 = { version = "4", features = ["reqwest", "rustls-tls"] }
 gt_secrets = { workspace = true }
+gt_app = { workspace = true }
+types = { workspace = true }
 tempfile = "3"
 
 [lints]
