--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -14,3 +14,4 @@ license.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 aws-sdk-dynamodb = { workspace = true }
 serde_json = { workspace = true }
+redact = { workspace = true }
