--- a/upload_video/Cargo.toml
+++ b/upload_video/Cargo.toml
@@ -29,6 +29,7 @@ gt_secrets = { workspace = true }
 gt_app = { workspace = true }
 types = { workspace = true }
 tempfile = "3"
+youtube_lambda = { path = "../youtube_lambda" }
 
 [lints]
 workspace = true
