feat(upload_video): add Dockerfile and update configuration for upload_video service

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,7 +16,8 @@
         "twitch_lambda",
         "youtube_lambda",
         "media_lambda",
-        "render_job"
+        "render_job",
+        "upload_video"
       ]
     },
     {
