--- a/youtube_lambda/Cargo.toml
+++ b/youtube_lambda/Cargo.toml
@@ -17,7 +17,6 @@ aws-sdk-secretsmanager = { workspace = true }
 axum = { workspace = true }
 axum-aws-lambda = { workspace = true }
 chrono = { workspace = true }
-figment = { workspace = true }
 gt_axum = { workspace = true }
 gt_secrets = { workspace = true }
 lambda_http = { workspace = true }
@@ -33,6 +32,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 types = { workspace = true }
 uuid = { workspace = true }
+gt_app = { path = "../gt_app" }
 
 [lints]
 workspace = true
