--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -17,7 +17,6 @@ lambda_runtime = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
-figment = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 aws_lambda_events = { workspace = true }
@@ -29,6 +28,7 @@ chrono = { workspace = true }
 uuid = { workspace = true }
 openai_dive = { workspace = true }
 types = { workspace = true }
+gt_app = { path = "../gt_app" }
 
 [lints]
 workspace = true
