--- a/gt_app/Cargo.toml
+++ b/gt_app/Cargo.toml
@@ -14,6 +14,8 @@ categories.workspace = true
 aws-config = { workspace = true }
 figment = { workspace = true }
 serde = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [lints]
 workspace = true
