--- a/summarize_transcription/Cargo.toml
+++ b/summarize_transcription/Cargo.toml
@@ -20,9 +20,10 @@ lambda_runtime = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
-figment = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+types = { workspace = true }
+gt_app = { path = "../gt_app" }
 
 [lints]
 workspace = true
