--- a/twitch_lambda/Cargo.toml
+++ b/twitch_lambda/Cargo.toml
@@ -19,7 +19,6 @@ tower-http = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
-figment = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 axum = { workspace = true }
@@ -33,6 +32,7 @@ redact = { workspace = true }
 oauth2 = { version = "4", features = ["reqwest", "rustls-tls"] }
 gt_secrets = { workspace = true }
 gt_axum = { workspace = true }
+gt_app = { path = "../gt_app" }
 
 [lints]
 workspace = true
