--- a/cdk/package.json
+++ b/cdk/package.json
@@ -20,7 +20,8 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.184.0",
+    "aws-cdk-lib": "2.186.0",
+    "@aws-cdk/aws-lambda-python-alpha": "2.186.0-alpha.0",
     "constructs": "^10.0.0"
   }
 }
