--- a/.github/workflows/cdk.yml
+++ b/.github/workflows/cdk.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Validate CDK synth
         run: |
           cd cdk
-          npx cdk synth --version-reporting=false
+          npx cdk synth
         env:
           AWS_DEFAULT_REGION: us-east-1
           AWS_REGION: us-east-1
