chore: update AWS CDK dependencies and fix frontend stack tests
- Bump aws-cdk and related libraries to latest versions for improved features and fixes.
- Update frontend stack test to ensure proper formatting and consistency.
- Add missing commas in object literals for better readability.
- Ensure Lambda function properties are correctly asserted in tests.
- Verify that no environment variables are set on Lambda function as required by Lambda@Edge.

--- a/.github/workflows/cdk.yml
+++ b/.github/workflows/cdk.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Validate CDK synth
         run: |
           cd cdk
-          npx cdk synth
+          npm run cdk synth
         env:
           AWS_DEFAULT_REGION: us-east-1
           AWS_REGION: us-east-1
