--- a/.github/workflows/publish_ts_types.yml
+++ b/.github/workflows/publish_ts_types.yml
@@ -10,8 +10,9 @@ jobs:
 
     permissions:
       id-token: write
-      contents: read
+      contents: write
       packages: write
+      pull-requests: write
 
     defaults:
       run:
@@ -115,6 +116,8 @@ jobs:
 
       - name: Create PR to update types package
         if: steps.update_version.outputs.updated_version != '' || steps.check_changes.outputs.has_changes == 'true'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --local user.name "GitHub Actions"
           git config --local user.email "actions@github.com"
