--- a/.github/workflows/docker-build-reusable.yml
+++ b/.github/workflows/docker-build-reusable.yml
@@ -123,8 +123,13 @@ jobs:
       - name: Clean up Docker build artifacts between batches
         if: ${{ inputs.build_batch1 && inputs.build_batch2 }}
         run: |
-          echo "Cleaning up Docker build artifacts to free space for batch 2..."
+          df -h
+          docker rmi $(docker image ls -aq) >/dev/null 2>&1 || true
+          df -h
+          docker buildx prune
+          df -h
           docker system prune -af --volumes
+          df -h
           echo "Docker cleanup completed"
 
       - name: Build and push Docker images (Batch 2)
