--- a/.github/workflows/docker-build-reusable.yml
+++ b/.github/workflows/docker-build-reusable.yml
@@ -90,6 +90,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Patch Docker Daemon data-root
+        run: |
+          DOCKER_DATA_ROOT='/mnt/var/lib/docker'
+          DOCKER_DAEMON_JSON='/etc/docker/daemon.json'
+          sudo mkdir -p "${DOCKER_DATA_ROOT}"
+          jq --arg dataroot "${DOCKER_DATA_ROOT}" '. + {"data-root": $dataroot}' "${DOCKER_DAEMON_JSON}" > "/tmp/docker.json.tmp"
+          sudo mv "/tmp/docker.json.tmp" "${DOCKER_DAEMON_JSON}"
+          sudo systemctl restart docker
+        
       - name: Configure AWS credentials
         if: ${{ inputs.push_images }}
         uses: aws-actions/configure-aws-credentials@v4
@@ -119,18 +128,6 @@ jobs:
             *.cache-to=type=gha,mode=max
         env:
           IMAGE_TAG: ${{ inputs.image_tag }}
-
-      - name: Clean up Docker build artifacts between batches
-        if: ${{ inputs.build_batch1 && inputs.build_batch2 }}
-        run: |
-          df -h
-          docker rmi -f $(docker image ls -aq) >/dev/null 2>&1 || true
-          df -h
-          docker buildx prune -f
-          df -h
-          docker system prune -af --volumes
-          df -h
-          echo "Docker cleanup completed"
 
       - name: Build and push Docker images (Batch 2)
         if: ${{ inputs.build_batch2 }}
