--- a/.github/workflows/cdk-deploy-reusable.yml
+++ b/.github/workflows/cdk-deploy-reusable.yml
@@ -1,49 +1,31 @@
-name: Build and Push Docker Images, Deploy CDK
+name: Reusable CDK Deploy
 
 on:
-  release:
-    types: [published]
   workflow_dispatch:
     inputs:
       image_version:
         description: 'Image version/tag to use'
         required: true
+        default: 'latest'
         type: string
-      deploy_cdk:
-        description: 'Deploy CDK after building images'
-        required: false
-        default: true
-        type: boolean
-
-env:
-  REGISTRY: 159222827421.dkr.ecr.us-west-2.amazonaws.com
+  workflow_call:
+    inputs:
+      image_version:
+        description: 'Image version/tag to use'
+        required: true
+        default: 'latest'
+        type: string
 
 jobs:
-  build-and-push:
-    uses: ./.github/workflows/docker-build-reusable.yml
-    with:
-      build_batch1: true
-      build_batch2: true
-      push_images: true
-      image_tag: ${{ github.event_name == 'release' && github.ref_name || github.event.inputs.image_version }}
-      aws_region: us-west-2
-      registry: 159222827421.dkr.ecr.us-west-2.amazonaws.com
-      aws_role_arn: arn:aws:iam::159222827421:role/GlowingTelegram-DockerGithubActionRole
-    permissions:
-      contents: read
-      id-token: write
-
   deploy-cdk:
-    needs: build-and-push
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' || (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_cdk == 'true')
     permissions:
       contents: read
       id-token: write
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -74,6 +56,6 @@ jobs:
           cd cdk
           npm run cdk -- deploy --all --require-approval never
         env:
-          IMAGE_VERSION: ${{ github.event_name == 'release' && github.ref_name || github.event.inputs.image_version }}
+          IMAGE_VERSION: ${{ github.event.inputs.image_version }}
           AWS_DEFAULT_REGION: us-west-2
           AWS_REGION: us-west-2
