--- a/audio_transcriber/Cargo.toml
+++ b/audio_transcriber/Cargo.toml
@@ -22,6 +22,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tempfile = "3"
 types = { workspace = true }
+thiserror = "2.0.15"
 
 [lints]
 workspace = true
