--- a/audio_transcriber/Cargo.toml
+++ b/audio_transcriber/Cargo.toml
@@ -24,5 +24,12 @@ tempfile = "3"
 types = { workspace = true }
 thiserror = "2.0.15"
 
+[dev-dependencies]
+testcontainers = "0.24.0"
+testcontainers-modules = { version = "0.12.1", features = ["localstack"] }
+tokio-test = "0.4.4"
+bytes = "1.10"
+chrono = { version = "0.4", features = ["serde"] }
+
 [lints]
 workspace = true
