--- a/embedding_service/Cargo.toml
+++ b/embedding_service/Cargo.toml
@@ -21,13 +21,14 @@ serde_dynamo = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
-tokio-postgres = "0.7"
+tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
 figment = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 openai_dive = { workspace = true }
 chrono = { workspace = true }
 uuid = { workspace = true }
+pgvector = { version = "0.4", features = ["postgres"] }
 
 [dev-dependencies]
 testcontainers = "0.24.0"
@@ -36,6 +37,7 @@ testcontainers-modules = { version = "0.12.1", features = [
   "postgres",
 ] }
 hyper = { version = "0.14", features = ["full"] }
+pgvector = { version = "0.4", features = ["postgres"] }
 
 [lints]
 workspace = true
