--- a/twitch_lambda/Cargo.toml
+++ b/twitch_lambda/Cargo.toml
@@ -11,6 +11,7 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+futures = "0.3.31"
 aws-config = { workspace = true }
 aws-sdk-secretsmanager = { workspace = true }
 lambda_runtime = { workspace = true }
