feat: Add widget updater lambda for scheduled updates
- Introduced `widget_updater_lambda` to handle scheduled updates for stream widgets.
- Implemented countdown widget logic with actions: start, pause, resume, reset, and set_duration.
- Added support for querying active widgets by type using a Global Secondary Index (GSI) in DynamoDB.
- Updated `StreamWidget` schema to include `type` and `active` fields.
- Enhanced WebSocket message handling to support widget actions and responses.
- Updated Dockerfile and build configurations to include the new lambda function.
- Added tests for countdown widget behavior to ensure correct state updates.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ members = [
   "youtube_lambda",
   "upload_video",
   "gt_app",
-  "chat_processor_lambda", "embedding_service",
+  "chat_processor_lambda",
+  "embedding_service",
+  "widget_updater_lambda",
 ]
 
 [workspace.package]
@@ -40,10 +42,7 @@ aws_lambda_events = "1.0"
 axum-aws-lambda = "0.11.0"
 lambda_runtime = "1.0"
 axum = "0.8"
-lambda_http = { version = "1.0", features = [
-  "apigw_http",
-  "apigw_websockets",
-] }
+lambda_http = { version = "1.0", features = ["apigw_http", "apigw_websockets"] }
 tower-http = { version = "0.6", features = [
   "compression-gzip",
   "compression-deflate",
