--- a/widget_updater_lambda/Cargo.toml
+++ b/widget_updater_lambda/Cargo.toml
@@ -8,17 +8,17 @@ name = "bootstrap"
 path = "src/main.rs"
 
 [dependencies]
-aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
-aws-sdk-dynamodb = "1.56.0"
-chrono = { version = "0.4", features = ["serde"] }
-gt_app = { path = "../gt_app" }
-lambda_runtime = "0.13.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-tokio = { version = "1", features = ["macros"] }
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-types = { path = "../types" }
+aws-config = { workspace = true }
+aws-sdk-dynamodb = { workspace = true }
+chrono = { workspace = true }
+gt_app = { workspace = true }
+lambda_runtime = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+types = { workspace = true }
 
 [profile.release]
 lto = true
