--- a/.github/workflows/publish_ts_types.yml
+++ b/.github/workflows/publish_ts_types.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          registry-url: https://registry.npmjs.org
+          registry-url: "https://registry.npmjs.org"
+          node-version: "24"
 
       - name: Install dependencies
         run: npm ci
@@ -110,9 +111,7 @@ jobs:
 
       - name: Publish to npm
         if: steps.check_changes.outputs.has_changes == 'true'
-        run: npm publish --provenance --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm publish
 
       - name: Create PR to update types package
         if: steps.update_version.outputs.updated_version != '' || steps.check_changes.outputs.has_changes == 'true'
