--- a/cdk/tsconfig.json
+++ b/cdk/tsconfig.json
@@ -8,6 +8,7 @@
     ],
     "declaration": true,
     "strict": true,
+    "noEmit": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noImplicitThis": true,
