--- a/.github/workflows/cdk-validate.yml
+++ b/.github/workflows/cdk-validate.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
           cache-dependency-path: cdk/package-lock.json
       - name: Install CDK dependencies
         run: |
@@ -36,3 +36,4 @@ jobs:
         env:
           AWS_DEFAULT_REGION: us-east-1
           AWS_REGION: us-east-1
+          SKIP_GITHUB_ENV: "true"
