--- a/cdk/tsconfig.json
+++ b/cdk/tsconfig.json
@@ -6,7 +6,7 @@
       "es2020",
       "dom"
     ],
-    "declaration": true,
+    "declaration": false,
     "strict": true,
     "noEmit": true,
     "noImplicitAny": true,
